fix: Update .by_andcool styles for improved layout and alignment

--- a/src/styles/root/page.module.css
+++ b/src/styles/root/page.module.css
@@ -186,6 +186,10 @@
     margin: 0;
     font-size: .8rem;
     font-weight: 300;
+
+    display: flex;
+    gap: .4rem;
+    align-items: center;
 }
 
 .by_andcool svg {
